welcome.lessons.welcome.array.has271.Has271.scala.error
has271:6: error: value >=- is not a member of Int
} else if (nums(i)==2 && nums(i+1)==7 && nums(i+2)>=-1 && nums(i+2)<=3) {
                                                  ^